--- a/static/css/utilities/links.css
+++ b/static/css/utilities/links.css
@@ -5,7 +5,7 @@ article
   div.article-content
   ul:not(.articles-timeline):not(.related-posts-list)
   a {
-  color: black;
+  color: var(--elegant-text-color);
   display: inline-block;
   position: relative;
   text-decoration: none;
@@ -15,19 +15,19 @@ article
     left: 0;
     width: 100%;
     height: 1px;
-    background: silver;
+    background: var(--elegant-link-color);
     content: "";
-    opacity: 1;
+    opacity: 0;
     transition: opacity 0.3s, transform 0.3s;
-    transform: translateY(0px);
+    transform: translateY(5px);
   }
   &:hover {
-    color: royalblue;
+    color: var(--elegant-link-color);
     text-decoration: none;
     transition: color 0.1s;
     &:after {
-      opacity: 0;
-      transform: translateY(5px);
+      opacity: 1;
+      transform: translateY(0px);
     }
   }
   &:focus {
@@ -47,14 +47,14 @@ div.recent-posts-posted a {
 }
 #lunr-search-result > div.lunr-search-result-item > h4 > a,
 a.ampl {
-  color: royalblue;
+  color: var(--elegant-link-color);
   display: inline-block;
   position: relative;
   &:focus {
     text-decoration: none;
   }
   &:hover {
-    color: dodgerblue;
+    color: var(--elegant-link-hover-color);
     text-decoration: none;
     transition: color 0.1s;
     &:after {
@@ -68,7 +68,7 @@ a.ampl {
     left: 0;
     width: 100%;
     height: 2px;
-    background: dodgerblue;
+    background: var(--elegant-link-hover-color);
     content: "";
     opacity: 0;
     transition: opacity 0.3s, transform 0.3s;
